...
){
    Column(
        modifier = modifier
    ) {
        TopBar(name = stringResource(id = R.string.favorite) , navigateBack = navigateBack)
        if(heroes.isEmpty()){
            DataNotFound()
        }
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(8.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("HeroList")
        ){
            items(heroes){
                    data ->
                HeroItem(
                    photoUrl = data.photoUrl,
                    name = data.name,
...
