...
            }
            composable(
                route = Screen.DetailHero.route,
                arguments = listOf(navArgument("heroName"){
                    type = NavType.StringType
                }),){
                val id = it.arguments?.getString("heroName") ?: "Albedo"
                DetailScreen(
                    heroName = id,
                    navigateBack = {
                        navController.navigateUp()
                    }
                )
...
