...
        FloatingActionButton(
            onClick = { saveHero() },
            backgroundColor = Color(0xFF3e9f85),
            modifier = modifier
                .align(Alignment.BottomEnd)
                .padding(32.dp)
                .testTag("FavoriteButton")
        ) {
            if(isFavoriteHero){
                Icon(painter = painterResource(
                    id = R.drawable.baseline_favorite_full_24),
                    contentDescription = stringResource(id = R.string.favorite),
                    modifier.testTag("FavoriteFull")
...
